syntax = "proto3";
package com.subterranean_security.crimson.core.proto;

import "net/sequences/Keylogger.proto";
import "net/sequences/Listener.proto";
import "net/misc/Misc.proto";

message MI_TriggerProfileDelta {
	repeated ProfileTimestamp profile_timestamp = 1;
}

message ProfileTimestamp {
	int32 cvid = 1;
	int64 timestamp = 2;
}

message AttributeGroupContainer {
	int32 group_type = 1; // CPU, GPU, GENERAL...
	string group_id = 2;
	map<int32, string> attribute = 3;
}

message EV_ProfileDelta {

	int32 cvid = 1;
	int64 departure_time = 2;
	
	// Groups
	repeated AttributeGroupContainer group = 10;
	
	// Nonstring attributes
	bool fig = 5;
	
}

message EV_ServerProfileDelta {
	EV_ProfileDelta pd = 1;

	repeated ListenerConfig listener = 2;
	repeated EV_ViewerProfileDelta viewer_user = 3;
	repeated AuthMethod auth_method = 4;
}

message EV_ViewerProfileDelta {
	EV_ProfileDelta pd = 1;
	repeated int64 viewer_permissions = 2;
	
	//int64 last_login_time = 2;
	//string last_login_ip = 3;
	//int64 login_time = 4;
	//string login_ip = 5;
	
}